[package]
name = "bls12_381"
version = "0.8.0"
authors = [
    "Bhargav Annem <bhargav.annem@gmail.com>",
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
edition = "2021"
rust-version = "1.63"
description = "Implementation of the BLS12-381 pairing-friendly elliptic curve construction"
homepage = "https://github.com/sp1-patches/bls12_381"
license = "MIT/Apache-2.0"
repository = "https://github.com/sp1-patches/bls12_381"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[dependencies]
cfg-if = "1.0"
digest = { version = "0.10", optional = true }
ff = { version = "0.13", default-features = false }
group = { version = "0.13", optional = true, default-features = false }
pairing = { version = "0.23", optional = true }
rand_core = { version = "0.6", default-features = false }
subtle = { version = "2.2.1", default-features = false }
zeroize = { version = "1.4", optional = true, default-features = false }
bytemuck = { version ="1.21.0", features = ["derive", "min_const_generics"]}
hex = { version = "0.4", optional = true, default-features = false, features = ["alloc"] }

# For r0vm, also have to specify the feature below
[target.'cfg(all(target_os = "zkvm", target_vendor = "risc0"))'.dependencies]
risc0-bigint2 = { version = "1.4.0-rc.2", default-features = false, features = [ "unstable" ], optional = true }

# For Brevis Pico, also have to specify the feature below
[target.'cfg(all(target_os = "zkvm", target_vendor = "risc0"))'.dependencies]
pico-patch-libs = { git = "https://github.com/brevis-network/pico.git", optional = true, default-features = false }

# For Succinct SP1
[target.'cfg(all(target_os = "zkvm", target_vendor = "succinct"))'.dependencies]
sp1-lib = { version = "5.0.0", default-features = false }

# For Ziren
[target.'cfg(all(target_os = "zkvm", target_vendor = "zkm"))'.dependencies]
zkm-lib = { git = "https://github.com/ProjectZKM/Ziren.git", default-features = false }

[dev-dependencies]
csv = ">= 1.0, < 1.2" # csv 1.2 has MSRV 1.60
criterion = "0.3"
hex-literal = "0.3"
rand_xorshift = "0.3"
sha2 = "0.10"
sha3 = "0.10"
rand = "0.8"

[features]
default = ["groups", "pairings", "alloc", "bits"]
bits = ["ff/bits"]
groups = ["group"]
pairings = ["groups", "pairing"]
alloc = ["group/alloc"]
experimental = ["digest", "groups", "hex"]
nightly = ["subtle/nightly"]

# For Brevis Pico
zkvm-pico = ["pico-patch-libs"]
# For r0vm
zkvm-risc0 = ["risc0-bigint2"]

[[test]]
name = "expand_msg"
required-features = ["alloc", "experimental"]

[[test]]
name = "hash_to_curve_g1"
required-features = ["experimental"]

[[test]]
name = "hash_to_curve_g2"
required-features = ["experimental"]

[[bench]]
name = "groups"
harness = false
required-features = ["groups"]

[[bench]]
name = "hash_to_curve"
harness = false
required-features = ["experimental"]
